# XAI

./: README.md
xai-glassbox/: pyproject.toml
xai-glassbox/app/: dashboard.py
xai-glassbox/data/: german_credit_data.csv
xai-glassbox/src/: explainer.py
