[tool.poetry]
name = "xai-glassbox"
version = "0.1.0"
description = "Plug-and-play Model Explainability Engine"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
shap = "^0.46.0"          # The core XAI library
matplotlib = "^3.9.0"
streamlit = "^1.38.0"     # For the Dashboard

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"